backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 374445650484.dkr.ecr.us-east-1.amazonaws.com/backend-test-app:latest
          ports:
            - containerPort: 5000
